Fix vertical alignment of dropdown toggle icon

--- a/assets/scss/material/_menu.scss
+++ b/assets/scss/material/_menu.scss
@@ -361,6 +361,7 @@
     display: inline-block;
     margin-right: ($caret-spacer-x * -1);
     margin-left: $caret-spacer-x;
+    vertical-align: top;
 
     .dropright & {
       content: $caret-icon-right;
